prevent horizontal scrolling

--- a/source/stylesheets/pages/_index.scss
+++ b/source/stylesheets/pages/_index.scss
@@ -4,4 +4,5 @@
 
 body {
   background-color: rgba(255,255,255,1);
+  overflow-x: hidden;
 }
